--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "description": "",
   "main": "./src/index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --open --inline",
+    "start": "concurrently \"npm run server\" \"npm run json-server\"",
+    "server": "node src/js/server.js",
+    "json-server": "json-server --watch db.json --port 5000",
     "build": "rm -f build && cross-env NODE_ENV=production webpack --progress",
     "lint": "eslint src/js",
     "stylelint": "stylelint src/css"
@@ -14,6 +16,7 @@
     "babel-loader": "^8.1.0",
     "babel-minify-webpack-plugin": "^0.3.1",
     "babel-preset-env": "^2.0.0-beta.2",
+    "concurrently": "^9.0.1",
     "copy-webpack-plugin": "^5.1.1",
     "cross-env": "^7.0.2",
     "css-loader": "^3.5.3",
@@ -25,6 +28,7 @@
     "html-replace-webpack-plugin": "^2.5.6",
     "html-webpack-plugin": "^4.3.0",
     "imagemin-webpack-plugin": "^2.4.2",
+    "json-server": "^1.0.0-beta.3",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-import": "^12.0.1",
@@ -38,5 +42,7 @@
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "express": "^4.21.0"
+  }
 }
